Switches to webpack dev server and adds friendly output

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -9,6 +9,7 @@
   <title>MMT Digital FE Test</title>
 </head>
 <body>
+  Welcome to the MMT Digital Front-end Test 👌
   <script src='/assets/bundle.js'></script>
 </body>
 </html>
