--- a/src/public/index.html
+++ b/src/public/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
   Welcome to the MMT Digital Front-end Test 👌
+  <div id="root"></div>
   <script src='/assets/bundle.js'></script>
 </body>
 </html>
