--- a/src/public/index.html
+++ b/src/public/index.html
@@ -5,11 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" type="text/css" href="/assets/styles.css">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   <link href="/assets/favicon.ico" type="image/x-icon" rel="shortcut icon"/>
   <title>MMT Digital FE Test</title>
 </head>
 <body>
-  Welcome to the MMT Digital Front-end Test 👌
+  Welcome to Atty's FE Digital test for MMT
   <div id="root"></div>
   <script src='/assets/bundle.js'></script>
 </body>
